???? 0.8.7

    user visible changes, client:
    * Mac: When using --run and script fails, exit code is passed correctly.

24/2/2014 0.8.6 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * ACCEPTABLE_YAML_DOC_TAGS from main.yaml was missing from th ecompiled version.
    * version command will add "(not compiled)" if instl is running though python interpreter.
    * New var: __INSTL_COMPILED__ set to True is instl was compiled and False is running though python interpreter.

    user visible changes, admin:
    * fix props:    write svn info to file for debugging and reference. But go one folder up so not to be in the svn repo.

    programmer visible changes:
    * augmentedYaml when running as __main__ can open urls.
    * platformHelper's copy tool is now initialized early so it can be used by InstlInstanceBase.
    * check_prerequisite_var_existence put to good use.
    * copy field added to cached includes, specifying where to copy the file.
    * new batchAccum sections post-sync, post-copy.
    * platformHelper's copy_file_to_file can create a hard link on Mac/linux.

19/2/2014 0.8.5 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Fixed many sync bugs especialy on Windows.
    * New automatic installation items:
        __ALL_ITEMS_IID__:  all the iids from the index
        __ALL_GUIDS_IID__: all the iids from the index that have guids.
    * Fixed a bug where depend on a guid would not register as depend.
    * Time reporting on exit with error on Mac.
    * Download max-time, connect-timeout and retry have all been increased.
    * More precise, and less verbose, progress messages. No fake progress message when there's nothing to be done.
    * More precise decision when to untar existing wtar files.
    * New Yaml variable: LAST_PROGRESS, set the number of progress items to start with, so two batch files can have
        consecutive progress reports. Defaults to 0.